# chatter

./: .gitignore  CHANGELOG.md  README.md  autoreply.exp  cabal.project  cabal.project.freeze  chatio.cabal  chatter.cabal  chatter.nix  default-nix.nix  default.nix  looper.sh  replacers.sh  shell.nix  stack.yaml
.direnv/: cache-.2555.41dddb12837  drv
.github/workflows/: haskell-release-dev.yml  haskell-release-main.yml  haskell-release-nightly.yml  haskell-release-prod.yml  haskell-release-tag.yml  main.yml  nix.yml.disabled
config/: chatterconfig.env.example  replacers.yml.example
lib/Chatter/: Prelude.hs
lib/Chatter/Discord/: Types.hs
lib/Chatter/Omegle/: Types.hs
scripts/: make-release.sh
src/: discord.hs  omegle.hs
src/Lib/: Prelude.hs
src/Lib/Discord/: Types.hs
src/Lib/Omegle/: Types.hs
