cabal-version:      3.4

-- Newer versions complain
name:               chatter
version:            0.2.0.0
synopsis:           Chat tools
description:        Chat tools for various networks

-- bug-reports:
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         Dan Dart
copyright:          Dan Dart 2019

-- category:
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base  >=4.20.0.0 && <5
    , text

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

  hs-source-dirs:     lib
  exposed-modules:
    Chatter.Discord.Types
    Chatter.Prelude

executable chiscord
  main-is:            discord.hs
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base             >=4.20.0.0 && <5
    , chatter
    , discord-haskell  >=1.17.0
    , mtl
    , process
    , text
    , transformers

  hs-source-dirs:     src
